--- a/wiki/installation.wiki
+++ b/wiki/installation.wiki
@@ -10,7 +10,10 @@ Una vez descargado, lo descomprimimos tal cual en algún lugar de la computadora
 
 [http://laberintoraton.googlecode.com/svn/pics/escritorio_img.png]
 
-Después de esto, arrancamos el *[http://www.eclipse.org/ Eclipse]* y una vez en el *Workbench* 
+Después de esto, arrancamos *[http://www.eclipse.org/ Eclipse]* y una vez en el *Workbench* nos dirigimos a menú *File* > Importar...
+
+
+[http://laberintoraton.googlecode.com/svn/pics/importar_img.png]
 
 
 = Details =
