--- a/wiki/installation.wiki
+++ b/wiki/installation.wiki
@@ -30,7 +30,25 @@ Para finalmente tener el tablero inicializado en *10`*`15*:
 
 [http://laberintoraton.googlecode.com/svn/pics/prinicipal_img.png]
 
-[http://laberintoraton.googlecode.com/svn/pics/tablero_blanco_img.png
-]
+[http://laberintoraton.googlecode.com/svn/pics/tablero_blanco_img.png]
 
 =Manual de Usuario=
+
+Una vez ejecutado el programa, vamos a dibujar el tablero, procurando este orden:
+* Pared
+* Salida
+* Ratón
+
+[http://laberintoraton.googlecode.com/svn/pics/tablero_img.png]
+
+Una vez dibujado los 3 elementos básicos, o en su defecto sólo el ratón y la salida, podemos iniciar la búsqueda por la salida, este movimiento se obtiene moviendo el scroll ya sea del mouse o del touchpad.
+
+=== Dos posibles escenarios ===
+
+Que el ratón encuentre la salida.
+
+[http://laberintoraton.googlecode.com/svn/pics/salida_encontrada_img.png]
+
+Que no haya salida que encontrar y por lo tanto ya no realize ningún movimiento.
+
+[http://laberintoraton.googlecode.com/svn/pics/tablero_sin_salida_img.png]
